[project]
name = "umbral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.12.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jax[cuda]>=0.6.2",
    "optax>=0.2.5",
    "rich>=14.0.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.53.1",
]

[dependency-groups]
dev = [
    "datasets>=3.6.0",
    "scikit-learn>=1.7.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
