[project]
name = "umbral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "optax>=0.2.5",
    "rich>=14.0.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.53.1",
]

[dependency-groups]
dev = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "timm>=1.0.16",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]